tests/test-dirs/upstream-typing-recovery/original-tests/invalid_atomic_loc_payload.compilers.reference
File "invalid_atomic_loc_payload.ml", line 1:
Error: Multiple errors were encountered
File "invalid_atomic_loc_payload.ml", line 12, characters 12-27:
12 |   let f t = [%atomic.loc t]
                 ^^^^^^^^^^^^^^^
  Invalid [%atomic.loc] payload, a record field access is expected.
File "invalid_atomic_loc_payload.ml", line 16, characters 17-19:
16 | let t : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
